[metadata]
name = drf-extended
version = 0.1
description = DRF extender for django models.
long_description = file: README.md
long_description_content_type = text/markdown
author = Vladyslav Halatskyi
author_email = galatskiy.vlad@steelkiwi.com
project_urls =
    Bug Tracker = https://github.com/floydya/drf-extended/issues
    Source Code = https://github.com/floydya/drf-extended
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Software Development :: Libraries :: Python Modules
    Utilities

[options]
include_package_data = true
packages = find:
python_requires = >= 3.7
install_requires =
    Django>=3
    djangorestframework>=3.13


[options.packages.find]
exclude =
    example/*
    test_application/*


[flake8]
exclude =
    .git,
    */migrations/*,
    docs,
    */tests/*,
    example,
    .mypy_cache,
    .venv
per-file-ignores =
    __init__.py: F401
